discussion/kv_engine/173473/173473_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Add an item limit to range scan continue

Allow the continue to specify an item limit, which is checked
by the continue code. The continue will yield when hitting the
limit and require the client to re-issue a continue.

Change-Id: I4690d5fa2d7812bfe2e6a0a214a115163a212550

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-04-27 14:26:44.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-27 14:38:50.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18872/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18872/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19914/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19914/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27288/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27288/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18012/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18012/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6743/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6743/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6836/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6836/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19216/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19216/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17087/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:79:13: error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"? [clang-diagnostic-error]
            syncedContinueState.withRLock([](const auto& cs) { return cs; });
            ^~~~~~~~~~~~~~~~~~~
            continueState
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.h:222:40: note: "continueState" declared here
    folly::Synchronized<ContinueState> continueState;
                                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17087/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/range_scans/range_scan.cc:79:13:
error: use of undeclared identifier "syncedContinueState"; did you mean "continueState"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17087/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16055/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
